<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FahrenCel</string>
    <string name="action_settings">Settings</string>
    <string name="convert">Convert</string>
    <string name="second">To</string>
    <string name="faren">Fahrenheit</string>
    <string name="celc">Celsius</string>
    <string name="kel">Kelvin</string>
    <string name="rank">Rankine</string>
    <string name="start">Enter A Temperature:</string>
    <string name="equate">And Equation</string>
    <color name="gray">#808080</color>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="previous">Previous</string>

</resources>
